@@ -1,3 +1,10 @@
+2004-01-17  Rob Adams  <readams@readams.net>
+
+	* src/window.c (meta_window_show_menu): Don't show
+	left/right/up/down if a window is sticky.  Make "On Top"
+	insensitive for docks, splash screens, and desktops since it has
+	no effect anyway.
+
 2004-01-10  Rob Adams  <readams@readams.net>
 
 	* src/metacity.schemas.in: update default
